include/OE/OE.h


#define OE_TEXPOS (VIEW__texture)
#define OE_WHITEP (0xFFFFFFFF)
#	define OE_USABLE_SCREEN_SPACE (1<<1|1)
#	define OE_FULLSCREEN (1<<2|1)
#	define OE_FULLSCREEN_DESKTOP (1<<3|1)
#	define OE_BORDERLESS (1<<4|1)
#	define OE_BORDERED (1<<5|1)
#	define OE_LOW_GRAPHICS (1<<6|1)
#	define OE_MED_GRAPHICS (1<<7|1)
#	define OE_HIGH_GRAPHICS (1<<8|1)
#	define OE_KEEPVERTS (1<<9|1)
#define MAXPOSTPASS 16
#define OEFXAA "OEFXAA"
#define OESSAO "OESSAO"
#define OEBLOOM "OEB"
#define OESSGI "OESSGI"
#define OEDNOISE "OEDNOISE"
enum face {
	FRONT,
	BACKWARD,
	LEFT,
	RIGHT,
	UP,
	DOWN
};
enum CamType {
	PERSPECTIVE,
	ISOMETRIC
};
typedef void (*RENDFUNC)();
typedef void (*EVENTFUNC)();
typedef void (*UNILOADER)();
typedef struct {
	mat4x4 model;
	mat4x4 view, proj, rotation;
	mat4x4 mvp;
	vec3 position, target, up;
	vec3 front, right; 
	vec3 ray_hit; 
	float aspect;
	float fov;
	float oScale;
} Camera;
typedef struct {
	float *vrtPtr;
	unsigned int vrtSize;
	OEScript script;
	sg_buffer vbuf, ibuf;
	sg_shader defShader;
	sg_pipeline pipe;
	char *name;
	char *ID;
	int numID;
	int numIndices;
	mat4x4 originalModel; 
	mat4x4 model;
	vec3 pos;
} Object;
typedef struct {
	Object *obj; 
	unsigned int size;
	unsigned int instancingUpdates;
	vec3 *positions;
	vec4 *instModelsr0;
	vec4 *instModelsr1;
	vec4 *instModelsr2;
	vec4 *instModelsr3;
	sg_buffer vbuf;
	sg_buffer mbuf0, mbuf1, mbuf2, mbuf3;
} OEInstanceBatch;
typedef struct {
	int posx, posy;
	vec3 ray_hit;
} Mouse;
typedef struct {
	float passTime;
	char *ID;
	sg_pipeline pipe;
	UNILOADER uniformBind;
} PostPass;
_OE_HOT Object *OEGetObjectFromName(char *name);
_OE_HOT OEInstanceBatch *OEGetInstanceBatchFromName(char *name);
void OEAttachScript(char *ID, char *scriptPath);
_OE_HOT void OECreateInstanceBatch(Object *obj);
_OE_HOT void OEPushInstanceBatchData(OEInstanceBatch *batch, vec3 pos);
void OECreateObject(Object obj);
void OECreateMeshFromAssimp(char *name, char *path, vec3 pos, int flag, int fSize);
void OESetObjectPosition(char *ID, vec3 position);
_OE_HOT Vec3 OEGetObjectPosition(char *ID);
void OERotateObject(char *ID, float deg);
void OEResetRotation(char *ID);
_OE_HOT void OEDrawInstanceBatch(OEInstanceBatch *batch);
_OE_HOT void OEDrawInstanceBatchTex(OEInstanceBatch *batch,
		int assign, sg_view texture);
_OE_HOT void OEDrawObject(Object *obj);
_OE_HOT void OEDrawObjectTex(Object *obj, int assign, sg_view texture);
void OEDrawObjectEx(Object *obj, UNILOADER apply_uniforms);
sg_shader OEGetDefCubeShader();
sg_shader OEGetDefInstShader();
void OESetDefaultShader(sg_shader shader);
void OESetDefaultInstancingShader(sg_shader shader);
Object OEGetDefaultCubeObj(char *name);
_OE_PURE sg_view OEGetDefaultTexture();
_OE_PURE int OERendererIsRunning();
_OE_HOT void OEUpdateViewMat();
_OE_COLD void OEEnableDebugInfo();
_OE_COLD void OEDisableDebugInfo();
void OEComputeRotationMatrix(mat4x4 out, vec3 front, vec3 up);
int OEDumpSupportedPixelFormats();
_OE_COLD void OEGetGLVersion(int *_OE_RESTRICT maj, int *_OE_RESTRICT min);
_OE_COLD void OEGLFallbackInit();
void OESetRenderResolution(int w, int h);
_OE_COLD void OEForceGraphicsSetting(int flag);
_OE_COLD void OEInitRenderer(int width, int height, char *title, enum CamType camType);
void OEMoveCam(enum face direction, float len);
void OECamSet(vec3 pos);
_OE_PURE Camera *OEGetCamera();
_OE_PURE Vec3 OEGetCamPos();
_OE_PURE SDL_Event OEGetEvent();
_OE_PURE int OEIsKeyPressed();
_OE_PURE int OEIsKeyRepeating();
_OE_PURE int OEGetKeySym();
void OEGetMousePos(int *_OE_RESTRICT x, int *_OE_RESTRICT y);
_OE_PURE Mouse OEGetMouse();
_OE_PURE int OEIsMousePressed();
_OE_PURE int OEIsMouseRepeating();
_OE_PURE SDL_MouseButtonEvent *OEGetMouseEvent();
void OESetWindowFullscreen();
void OESetWindowFullscreenDesktop();
void OESetWindowBorderless();
void OESetWindowUsableScreen();
void OESetWindowDisplayMode(int flag);
unsigned int OEGetMouseScrollDown();
unsigned int OEGetMouseScrollUp();
SDL_GameController *OEGetGameController();
void OEPollEvents(EVENTFUNC event);
_OE_PURE int OEGetFPS();
_OE_PURE float OEGetFrameTime();
_OE_PURE unsigned int OEGetFrameSwap();
_OE_PURE float OEGetTick();
_OE_PURE SDL_Window *OEGetWindow();
void OEGetWindowResolution(int *x, int *y);
_OE_PURE OEUIData *OEGetOEUIData();
_OE_PURE char *OEQueryOSInfo();
void OEEnableSSAO();
void OEDisableSSAO();
void OEUpdateBloomParams(float threshold, float strength);
void OEEnableBloom(float threshold, float strength);
void OEDisableBloom();
void OEEnableFXAA();
void OEDisableFXAA();
void OEEnableSSGI(int rays, int steps);
void OEUpdateSSGIParams(int rays, int steps);
void OEDisableSSGI();
void OEEnableDNOISE();
void OEDisableDNOISE();
void OESetCursor(char *filePath);
PostPass *OEAddPostPass(char *id, sg_pipeline pipe, UNILOADER loader);
void OERemovePostPass(char *id);
float OEGetPostPassTime(char *ID);
_OE_HOT void OERenderFrame(RENDFUNC drawCall, RENDFUNC cimgui, RENDFUNC OEUI);
void OERendererTimerStart();
void OERendererTimerEnd();
void OECleanup();
_OE_PRIVATE void OEInitThreadPool(OEThreadPool **pool) {
	*pool = threadpool_create(1, MAX_QUEUE, 0);
	WASSERT(pool!=NULL, "Failed to init threadpool!");
}
_OE_PRIVATE void OEDispatchThread(OEThreadPool *pool, 
		void(*thread)(void *), void *arg, char *ID) {
	if(!pool||!thread) return;
	WASSERT(threadpool_add(pool,thread,arg,0,ID)==0,
			"Failed to dispatch thread!");
	WLOG(INFO_THREAD, "Thread successfully dispatched");
}
_OE_PRIVATE int OEGetThreadState(OEThreadPool *pool, char *ID) {
	if(!pool||!ID) return -1;
	int i, res=-1;
	pthread_mutex_lock(&pool->lock);
	for(i=0;i<pool->thread_count&&strcmp(pool->queue[i].ID, ID);i++);
	res = pool->queue[i].thread_state;
	pthread_mutex_unlock(&pool->lock);
	return res;
}
_OE_PRIVATE void OESetThreadState(OEThreadPool *pool, char *ID, int state) {
	if(!pool||!ID) return;
	pthread_mutex_lock(&pool->lock);
	int i;
	for(i=0;i<pool->thread_count&&strcmp(pool->queue[i].ID, ID);i++);
	pool->queue[i].thread_state = state;
	pthread_cond_broadcast(&pool->notify);
	pthread_mutex_unlock(&pool->lock);
}
_OE_PRIVATE void OEWaitThread(OEThreadPool *pool, char *ID, int waitFor) {
	if(!pool||!ID) return;
	int i;
	pthread_mutex_lock(&pool->lock);
	for(i=0;i<pool->thread_count&&strcmp(pool->queue[i].ID, ID);i++);
	while(pool->queue[i].thread_state!=waitFor) 
		pthread_cond_wait(&pool->notify, &pool->lock);
	pthread_mutex_unlock(&pool->lock);
}
_OE_PRIVATE void OEDestroyThreadPool(OEThreadPool *pool) {
	if(!pool) return;
	threadpool_destroy(pool, 0);
}
_OE_PRIVATE void OEClearInstanceBatchData() {
	int i;
	for(i=0;i<globalRenderer->iBatchSize;i++) {
		globalRenderer->iBatches[i].size = 0;
		globalRenderer->iBatches[i].instancingUpdates = 0;
	}
}