src/engine/texture.h

typedef struct {
	sg_image tex;
	char *ID;
} Texture;
struct textureHandle {
	Texture *textures;
	int cap;
	int total;
};
void addTexture(char *path, char *ID);
sg_image getTexture(char *ID);